frontend/tests/errors/ER-012/i32_wrap_positive/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Integer overflow wraps using two'"'"'s complement arithmetic | Integer overflow wraps using two'"'"'s complement (i32 positive overflow)


&^main() -> #i32 {
    x:#i32 = 2147483647;
    y:#i32 = x + 1;
    y;
}
